<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpStudent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/SignUpLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextFirstName"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:hint="@string/first_name"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/SignUpLabelId"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/StudentFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextLastName"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/last_name"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/TextFirstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/StudentLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/last_name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextEmail"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/email_id"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/TextLastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/StudentEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email_id"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextMobile"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/phone_number"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/TextEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/StudentMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phone_number"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextPassword"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/TextMobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/StudentPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonCreateAnAccount"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:text="@string/create_an_account"
        android:translationZ="7dp"
        android:stateListAnimator="@null"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/TextPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonAlreadyAccount"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/ButtonCreateAnAccount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>